fix: changed recurrence buttons spacing and rrule translation for on_the (#672)
* fix: changed buttons spacing and rrule translation for on_the

* fix: added translations for rrule

--- a/src/theme/ItaliaTheme/Views/_evento.scss
+++ b/src/theme/ItaliaTheme/Views/_evento.scss
@@ -22,4 +22,8 @@ body.contenttype-event {
       }
     }
   }
+
+  &.cms-ui .ui.button {
+    padding: 0px;
+  }
 }
